クエスト機能をUserQuestProgressベースに修正

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                 <span>ガイド</span>
             </div>
         </a>
-        <a href="/mission/">
+        <a href="/quests/">
             <div class="nav-item">
                 <span>📜</span>
                 <span>クエスト</span>
