--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
         <img src="{{ url_for('static', filename='images/medal.png') }}" alt="バッジ">
         <div class="menu-label">バッジ</div>
     </a>
-    <a href="/mission/" class="menu-item">
+    <a href="/quests/" class="menu-item">
         <img src="{{ url_for('static', filename='images/gear_inventory.png') }}" alt="クエスト">
         <div class="menu-label">クエスト</div>
     </a>
